$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.18-16 (opened November 9, 2010)

	* capscale: failed with na.action -- fix in ordiParseFormula().
	na.action was introduced in rev1002 (Sept 11, 2009), and then
	ruined with a change in ordiParseFormula() in rev1007 (Sept 15,
	2009) so it lived four days and was broken when released. The
	problem was reported by Nevil Amos.

	* SSgleason: a new SS-species-area-model.

	* SSlomolino: improved starting values for 'xmid' (and
	'Asym'). Now fitspecaccum(..., "lomolino") works in several cases,
	including BCI and bryceveg (but fails in <1% of cases). Now 'Asym'
	and 'xmid' are estimated from Arrhenius at log-log scale: 'Asym'
	is the predicted value at max(x), and 'xmid' is the value of x
	giving 'Asym/2'.

	* capscale: defines total inertia as the sum of absolute values of
	eigenvalues to be consistent with cmdscale(), wcmdscale(),
	eigenvals(), Gower and Mardia, Kent & Bibby.

	* eigenvals: added a method for "pcnm" and docs discuss handling
	negative eigenvalues in summary.eigenvals().

	* prc: Cajo ter Braak wrote new code for more direct
	implementation of PRC. This drops formula interface and directly
	finds model matrices avoiding aliased terms.
	
Version 1.18-15 (closed November 9, 2010)

	* procrustes: 'translation' needs to take into account 'scale',
	although Mardia et al. omit it. Reported, analysed and fix
	suggested by Christian Dudel (Bochum). 

	* fitspecaccum: uses now new SS-models for species-area
	relationship and several of standard SS-models for
	nls(). Placeholders for documentation added. Has a plot()
	function. 

	* Self-starting nls() models for species-area relationship: added
	Gitay and Lomolino models from Dengler 2009 (J Biogeog 36,
	728-744). Some more should be added, but these were among the best
	in Dengler's simulation. The starting values of the Lomolino model
	(SSlomolino) need work, as do several other candidate models. The